tests/data/placebo/test_message_broker_vpc_filter/ec2.DescribeSecurityGroups_2.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "Description": "default VPC security group",
                "GroupName": "default",
                "IpPermissions": [
                    {
                        "FromPort": 27017,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "172.31.16.236/32"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 27017,
                        "UserIdGroupPairs": []
                    }
                ],
                "OwnerId": "012345678910",
                "GroupId": "sg-6c7fa917",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": []
                    }
                ],
                "Tags": [
                    {
                        "Key": "NetworkLocation",
                        "Value": "Private"
                    }
                ],
                "VpcId": "vpc-d2d616b5"
            }
        ],
        "ResponseMetadata": {}
    }
}
