tests/data/placebo/test_message_broker_vpc_filter/ec2.DescribeVpcs_1.json
{
    "status_code": 200,
    "data": {
        "Vpcs": [
            {
                "CidrBlock": "172.16.0.0/16",
                "DhcpOptionsId": "dopt-24ff1940",
                "State": "available",
                "VpcId": "vpc-0598080981e0332f9",
                "OwnerId": "012345678910",
                "InstanceTenancy": "default",
                "CidrBlockAssociationSet": [
                    {
                        "AssociationId": "vpc-cidr-assoc-07a76233f273c7199",
                        "CidrBlock": "172.16.0.0/16",
                        "CidrBlockState": {
                            "State": "associated"
                        }
                    }
                ],
                "IsDefault": false,
                "Tags": [
                    {
                        "Key": "AWSServiceAccount",
                        "Value": "012345678910"
                    }
                ]
            },
            {
                "CidrBlock": "172.31.0.0/16",
                "DhcpOptionsId": "dopt-24ff1940",
                "State": "available",
                "VpcId": "vpc-d2d616b5",
                "OwnerId": "012345678910",
                "InstanceTenancy": "default",
                "CidrBlockAssociationSet": [
                    {
                        "AssociationId": "vpc-cidr-assoc-33669f5a",
                        "CidrBlock": "172.31.0.0/16",
                        "CidrBlockState": {
                            "State": "associated"
                        }
                    }
                ],
                "IsDefault": true,
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "FlowLogTest"
                    }
                ]
            }
        ],
        "ResponseMetadata": {}
    }
}
