tests/data/placebo/test_message_broker_vpc_filter/mq.DescribeBroker_1.json
{
    "status_code": 200,
    "data": {
        "ResponseMetadata": {},
        "AuthenticationStrategy": "simple",
        "AutoMinorVersionUpgrade": true,
        "BrokerArn": "arn:aws:mq:us-east-1:012345678910:broker:TestBroker2:b-c7aa6808-ba11-4d0c-b570-795e4724c841",
        "BrokerId": "b-c7aa6808-ba11-4d0c-b570-795e4724c841",
        "BrokerInstances": [
            {
                "ConsoleURL": "https://b-c7aa6808-ba11-4d0c-b570-795e4724c841-1.mq.us-east-1.amazonaws.com:8162",
                "Endpoints": [
                    "ssl://b-c7aa6808-ba11-4d0c-b570-795e4724c841-1.mq.us-east-1.amazonaws.com:61617",
                    "amqp+ssl://b-c7aa6808-ba11-4d0c-b570-795e4724c841-1.mq.us-east-1.amazonaws.com:5671",
                    "stomp+ssl://b-c7aa6808-ba11-4d0c-b570-795e4724c841-1.mq.us-east-1.amazonaws.com:61614",
                    "mqtt+ssl://b-c7aa6808-ba11-4d0c-b570-795e4724c841-1.mq.us-east-1.amazonaws.com:8883",
                    "wss://b-c7aa6808-ba11-4d0c-b570-795e4724c841-1.mq.us-east-1.amazonaws.com:61619"
                ],
                "IpAddress": "54.221.242.156"
            }
        ],
        "BrokerName": "TestBroker2",
        "BrokerState": "RUNNING",
        "Configurations": {
            "Current": {
                "Id": "c-35ea55fd-c8e6-4730-9e8f-d5329db8e9b7",
                "Revision": 1
            },
            "History": []
        },
        "Created": {
            "__class__": "datetime",
            "year": 2021,
            "month": 3,
            "day": 8,
            "hour": 17,
            "minute": 10,
            "second": 34,
            "microsecond": 888000
        },
        "DeploymentMode": "SINGLE_INSTANCE",
        "EncryptionOptions": {
            "UseAwsOwnedKey": true
        },
        "EngineType": "ActiveMQ",
        "EngineVersion": "5.15.14",
        "HostInstanceType": "mq.t3.micro",
        "Logs": {
            "Audit": false,
            "AuditLogGroup": "/aws/amazonmq/broker/b-c7aa6808-ba11-4d0c-b570-795e4724c841/audit",
            "General": false,
            "GeneralLogGroup": "/aws/amazonmq/broker/b-c7aa6808-ba11-4d0c-b570-795e4724c841/general"
        },
        "MaintenanceWindowStartTime": {
            "DayOfWeek": "THURSDAY",
            "TimeOfDay": "07:00",
            "TimeZone": "UTC"
        },
        "PubliclyAccessible": true,
        "SecurityGroups": [
            "sg-08f62b8c3dd4669bc"
        ],
        "StorageType": "efs",
        "SubnetIds": [
            "subnet-083ab4dd1a8b6eaa6"
        ],
        "Tags": {
            "testing": "test2"
        },
        "Users": [
            {
                "Username": "testing"
            }
        ]
    }
}
