tests/data/placebo/test_message_broker_vpc_filter/mq.DescribeBroker_2.json
{
    "status_code": 200,
    "data": {
        "ResponseMetadata": {},
        "AuthenticationStrategy": "simple",
        "AutoMinorVersionUpgrade": true,
        "BrokerArn": "arn:aws:mq:us-east-1:012345678910:broker:TestBroker1:b-cec75166-abad-49f9-bad0-015c7e405219",
        "BrokerId": "b-cec75166-abad-49f9-bad0-015c7e405219",
        "BrokerInstances": [
            {
                "ConsoleURL": "https://b-cec75166-abad-49f9-bad0-015c7e405219-1.mq.us-east-1.amazonaws.com:8162",
                "Endpoints": [
                    "ssl://b-cec75166-abad-49f9-bad0-015c7e405219-1.mq.us-east-1.amazonaws.com:61617",
                    "amqp+ssl://b-cec75166-abad-49f9-bad0-015c7e405219-1.mq.us-east-1.amazonaws.com:5671",
                    "stomp+ssl://b-cec75166-abad-49f9-bad0-015c7e405219-1.mq.us-east-1.amazonaws.com:61614",
                    "mqtt+ssl://b-cec75166-abad-49f9-bad0-015c7e405219-1.mq.us-east-1.amazonaws.com:8883",
                    "wss://b-cec75166-abad-49f9-bad0-015c7e405219-1.mq.us-east-1.amazonaws.com:61619"
                ],
                "IpAddress": "52.204.80.11"
            }
        ],
        "BrokerName": "TestBroker1",
        "BrokerState": "RUNNING",
        "Configurations": {
            "Current": {
                "Id": "c-4165d773-b914-4761-8bb1-a3d18acd6bd9",
                "Revision": 1
            },
            "History": []
        },
        "Created": {
            "__class__": "datetime",
            "year": 2021,
            "month": 3,
            "day": 8,
            "hour": 17,
            "minute": 8,
            "second": 50,
            "microsecond": 622000
        },
        "DeploymentMode": "SINGLE_INSTANCE",
        "EncryptionOptions": {
            "UseAwsOwnedKey": true
        },
        "EngineType": "ActiveMQ",
        "EngineVersion": "5.15.14",
        "HostInstanceType": "mq.t3.micro",
        "Logs": {
            "Audit": false,
            "AuditLogGroup": "/aws/amazonmq/broker/b-cec75166-abad-49f9-bad0-015c7e405219/audit",
            "General": false,
            "GeneralLogGroup": "/aws/amazonmq/broker/b-cec75166-abad-49f9-bad0-015c7e405219/general"
        },
        "MaintenanceWindowStartTime": {
            "DayOfWeek": "MONDAY",
            "TimeOfDay": "13:00",
            "TimeZone": "UTC"
        },
        "PubliclyAccessible": true,
        "SecurityGroups": [
            "sg-6c7fa917"
        ],
        "StorageType": "efs",
        "SubnetIds": [
            "subnet-efbcccb7"
        ],
        "Tags": {
            "test": "test1"
        },
        "Users": [
            {
                "Username": "testing"
            }
        ]
    }
}
