tests/data/placebo/test_message_broker_vpc_filter/mq.ListBrokers_1.json
{
    "status_code": 200,
    "data": {
        "ResponseMetadata": {},
        "BrokerSummaries": [
            {
                "BrokerArn": "arn:aws:mq:us-east-1:012345678910:broker:TestBroker2:b-68a927df-9830-4f87-a3e4-737be3f89160",
                "BrokerId": "b-68a927df-9830-4f87-a3e4-737be3f89160",
                "BrokerName": "TestBroker2",
                "BrokerState": "RUNNING",
                "Created": {
                    "__class__": "datetime",
                    "year": 2021,
                    "month": 4,
                    "day": 7,
                    "hour": 15,
                    "minute": 30,
                    "second": 36,
                    "microsecond": 763000
                },
                "DeploymentMode": "SINGLE_INSTANCE",
                "EngineType": "ActiveMQ",
                "HostInstanceType": "mq.m5.large"
            },
            {
                "BrokerArn": "arn:aws:mq:us-east-1:012345678910:broker:TestBroker1:b-6f66b513-8060-435f-820b-de08fef5f328",
                "BrokerId": "b-6f66b513-8060-435f-820b-de08fef5f328",
                "BrokerName": "TestBroker1",
                "BrokerState": "RUNNING",
                "Created": {
                    "__class__": "datetime",
                    "year": 2021,
                    "month": 4,
                    "day": 6,
                    "hour": 19,
                    "minute": 16,
                    "second": 20,
                    "microsecond": 473000
                },
                "DeploymentMode": "SINGLE_INSTANCE",
                "EngineType": "ActiveMQ",
                "HostInstanceType": "mq.t3.micro"
            }
        ]
    }
}
